fix wrapper overflow

--- a/src/stylus/_global.styl
+++ b/src/stylus/_global.styl
@@ -10,6 +10,8 @@ html
 
 #wrapper
   background: white url('/images/body-bg.png') top left/100% repeat-y
+  width 100%
+  overflow-x: hidden
 
 .g-wrapper
   max-width: 120rem
